--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scaled=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Mon nouveau Projet</title>
     <style>
@@ -14,7 +16,7 @@
     <header>
         <div class="container">
             <p id="logo">logo</p>
-            <img class="barre"src="hamburger-removebg-preview.png" alt="">
+            <img class="barre" src="hamburger-removebg-preview.png" alt="">
         </div>
     </header>
     <main>
@@ -26,7 +28,7 @@
             </div>
 
             <div class="text-div">
-                <P >How<h1>We Care For You</h1></P>
+                <p class="soda" >How<h1>We Care For You</h1>
                 <div class="line"></div>
 <div>
                 <ul>
